--- a/8.4-ansible-roles/requirements.yml
+++ b/8.4-ansible-roles/requirements.yml
@@ -3,3 +3,13 @@
     scm: git
     version: "1.11.0"
     name: clickhouse 
+
+  - src: git@github.com:YagudinTimur/vector-role.git
+    scm: git
+    version: "1.0.0"
+    name: vector-role
+
+  - src: git@github.com:YagudinTimur/lighthouse.git
+    scm: git
+    version: "1.0.0"
+    name: lighthouse
